[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24"
openmls = { version = "0.7.1" }
openmls_rust_crypto = "0.4.1"
openmls_traits = "0.4.1"
openmls_basic_credential = "0.4.1"
tls_codec = { version = "0.4", features = ["derive", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
ciborium = "0.2"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
rand = "0.8"
aes-gcm = "0.10"
hkdf = "0.12"
curve25519-dalek = { version = "4.1", features = ["rand_core"] }
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
